--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -48,6 +48,7 @@ jobs:
         env:
           WORKSPACE_PATH: ${{ github.workspace }}
           UNREAL_VERSION: ${{ inputs.unreal-version }}
+          DISALLOW_RAW_POINTERS: ${{ inputs.unreal-version == '4.27' && 'false' || 'true' }}
         run: |
           # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
           # For UE 5.4 we have to enable ipv6 to fix container startup issues. See https://github.com/adamrehn/ue4-docker/issues/357
@@ -63,6 +64,7 @@ jobs:
             --user $uid:$gid \
             --env HOME="/home/$user" \
             --env PATH="/home/$user/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
+            --env DISALLOW_RAW_POINTERS=$DISALLOW_RAW_POINTERS \
             --network ip6net -p 80:80 \
             ghcr.io/getsentry/unreal-docker:"$UNREAL_VERSION"-linux
           docker logout ghcr.io
