Update sample project distinguished name config

--- a/sample/Config/DefaultGame.ini
+++ b/sample/Config/DefaultGame.ini
@@ -3,7 +3,7 @@
 ProjectID=43BDA2D249F2ED19D80A1AB1A40BBE80
 Homepage="https://sentry.io/"
 CompanyName=Sentry
-CompanyDistinguishedName=Sentry Inc.
+CompanyDistinguishedName=CN=Sentry, O=Sentry, C=US
 CopyrightNotice=Copyright (c) 2024 Sentry. All Rights Reserved.
 ProjectName=SentryDemo
 Description=Demo project for Sentry UE plugin
