--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -168,4 +168,17 @@ jobs:
         with:
           name: UE ${{ inputs.unreal-version }} sample build (Linux)
           path: checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'LinuxNoEditor' || 'Linux' }}/
-          retention-days: 1
+          retention-days: 1          
+
+      - name: Run integration tests
+        id: run-integration-tests
+        if: ${{ success() && steps.run-tests.outcome == 'success' }}
+        env:
+          SENTRY_UNREAL_TEST_DSN: ${{ secrets.SENTRY_UNREAL_TEST_DSN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_UNREAL_TEST_APP_PATH: ${{ github.workspace }}/checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'LinuxNoEditor' || 'Linux' }}/SentryPlayground.sh
+        run: |
+          cd checkout/integration-test
+          mkdir build
+          cmake -B build -S .
+          pwsh -Command "Invoke-Pester -Path ./Integration.Tests.ps1"
