--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -106,4 +106,17 @@ jobs:
           name: UE ${{ inputs.unreal-version }} sample build (Windows)
           path: checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'WindowsNoEditor' || 'Windows' }}/
           retention-days: 1
-      
+
+      - name: Run integration tests
+        id: run-integration-tests
+        if: ${{ success() && steps.run-tests.outcome == 'success' }}
+        env:
+          SENTRY_UNREAL_TEST_DSN: ${{ secrets.SENTRY_UNREAL_TEST_DSN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_UNREAL_TEST_APP_PATH: ${{ github.workspace }}/checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'WindowsNoEditor' || 'Windows' }}/SentryPlayground.exe
+        run: |
+          cd checkout/integration-test
+          mkdir build
+          cmake -B build -S .
+          pwsh -Command "Invoke-Pester -Path ./Integration.Tests.ps1"
+
