--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -186,4 +186,4 @@ jobs:
           cd checkout/integration-test
           mkdir build
           cmake -B build -S .
-          pwsh -Command "Invoke-Pester -Path ./Integration.Tests.ps1"
+          pwsh -Command "Invoke-Pester -Path ./Integration.Tests.ps1 -CI"
