--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -188,3 +188,10 @@ jobs:
           mkdir build
           cmake -B build -S .
           Invoke-Pester Integration.Tests.ps1 -CI
+
+      - name: Upload integration test output
+        if: ${{ always() && steps.run-integration-tests.outcome == 'failure' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: UE ${{ inputs.unreal-version }} integration test output (Linux)
+          path: checkout/integration-test/output/
