--- a/.github/workflows/integration-test-linux.yml
+++ b/.github/workflows/integration-test-linux.yml
@@ -49,4 +49,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: UE ${{ inputs.unreal-version }} integration test output (Linux)
-          path: integration-test/output/
+          path: |
+            integration-test/output/
+            sample-build/SentryPlayground/Saved/Logs/
