--- a/.github/workflows/integration-test-windows.yml
+++ b/.github/workflows/integration-test-windows.yml
@@ -8,12 +8,19 @@ on:
 jobs:
   integration-test:
     name: Integration Test
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      # UE 5.2-5.3 require older DirectX runtime to run pre-built test app
+      - name: Install DirectX June 2010 Runtime
+        run: |
+          Invoke-WebRequest -Uri "https://download.microsoft.com/download/8/4/A/84A35BF1-DAFE-4AE8-82AF-AD2AE20B6B14/directx_Jun2010_redist.exe" -OutFile "$env:TEMP\directx_redist.exe"
+          Start-Process -FilePath "$env:TEMP\directx_redist.exe" -ArgumentList "/Q","/T:$env:TEMP\DirectX" -Wait
+          Start-Process -FilePath "$env:TEMP\DirectX\DXSETUP.exe" -ArgumentList "/silent" -Wait
 
       - name: Download sample build
         uses: actions/download-artifact@v4
