--- a/.github/workflows/ue-docker-android.yml
+++ b/.github/workflows/ue-docker-android.yml
@@ -98,9 +98,7 @@ jobs:
           --exclude debug \
           --exclude templates \
           --exclude ddc \
-          --prerequisites-dockerfile="./docker/ue-android-prerequisites.dockerfile" \
-          --docker-build-args="--build-arg" \
-          --docker-build-args="UNREAL_VERSION=$UE_VERSION" \
+          --prerequisites-dockerfile="./docker/ue-android-prerequisites-$UE_VERSION.dockerfile" \
           --opt itdependencies_args="--exclude=Mac --exclude=Win32 --exclude=Win64" \
           --opt buildgraph_args="-set:HostPlatformOnly=false -set:WithAndroid=true"
 
