--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -80,6 +80,24 @@ jobs:
           docker exec unreal powershell -Command 'New-Item -ItemType Directory -Path "$env:USERPROFILE\AppData\Roaming\Unreal Engine\UnrealBuildTool" -Force'
           docker exec unreal powershell -Command 'Copy-Item -Path "C:/workspace/checkout/.github/BuildConfiguration.xml" -Destination "$env:USERPROFILE\AppData\Roaming\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml" -Force'
 
+      - name: Configure project-local DDC
+        run: |
+          docker exec unreal powershell -Command @'
+          Add-Content -Path "C:/workspace/checkout/sample/Config/DefaultEngine.ini" -Value @"
+
+          [InstalledDerivedDataBackendGraph]
+          MinimumDaysToKeepFile=7
+          Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
+          AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
+          Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=EnginePak, Inner=Local, Inner=Shared)
+          Boot=(Type=Boot, Filename="%GAMEDIR%DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+          Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path="%GAMEDIR%DerivedDataCache", EnvPathOverride=UE-LocalDataCachePath, EditorOverrideSetting=LocalDerivedDataCache)
+          Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=10, FoldersToClean=-1, Path="%GAMEDIR%DerivedDataCache/Shared", EnvPathOverride=UE-SharedDataCachePath, EditorOverrideSetting=SharedDerivedDataCache, CommandLineOverride=SharedDataCachePath)
+          Pak=(Type=ReadPak, Filename="%GAMEDIR%DerivedDataCache/DDC.ddp")
+          EnginePak=(Type=ReadPak, Filename=%ENGINEDIR%DerivedDataCache/Compressed.ddp)
+          "@
+          '@
+
       - name: Run tests
         id: run-tests
         env:
@@ -116,7 +134,7 @@ jobs:
             -NullRHI
 
       - name: Save DDC and Cooked content to cache
-        if: always()
+        if: always() && steps.cache-content.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4
         with:
           path: |
